--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.1'
+    compile 'org.codehaus.groovy:groovy-all:2.4.3'
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.3'
+    testCompile 'junit:junit:4.11'
 }
 
 
