--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.3'
+    compile 'org.ow2.asm:asm-all:5.0.4'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.3'
     testCompile 'junit:junit:4.11'
 }
